@@ -4,7 +4,7 @@ use Test::More;
 
 BEGIN {
     plan skip_all => 'backends required' if(!-s 'thruk_local.conf' and !defined $ENV{'CATALYST_SERVER'});
-    plan tests => 157;
+    plan tests => 185;
 }
 
 BEGIN {
@@ -13,6 +13,9 @@ BEGIN {
     import TestUtils;
 }
 BEGIN { use_ok 'Thruk::Controller::summary' }
+
+my $hostgroup      = TestUtils::get_test_hostgroup();
+my $servicegroup   = TestUtils::get_test_servicegroup();
 
 my $pages = [
 # Step 1
@@ -33,6 +36,10 @@ my $pages = [
     '/thruk/cgi-bin/summary.cgi?report=1&displaytype=5&timeperiod=last7days&smon=2&sday=1&syear=2010&shour=0&smin=0&ssec=0&emon=2&eday=28&eyear=2010&ehour=24&emin=0&esec=0&hostgroup=all&servicegroup=all&host=all&alerttypes=3&statetypes=3&hoststates=7&servicestates=120&limit=25',
     '/thruk/cgi-bin/summary.cgi?report=1&displaytype=6&timeperiod=last7days&smon=2&sday=1&syear=2010&shour=0&smin=0&ssec=0&emon=2&eday=28&eyear=2010&ehour=24&emin=0&esec=0&hostgroup=all&servicegroup=all&host=all&alerttypes=3&statetypes=3&hoststates=7&servicestates=120&limit=25',
     '/thruk/cgi-bin/summary.cgi?report=1&displaytype=7&timeperiod=last7days&smon=2&sday=1&syear=2010&shour=0&smin=0&ssec=0&emon=2&eday=28&eyear=2010&ehour=24&emin=0&esec=0&hostgroup=all&servicegroup=all&host=all&alerttypes=3&statetypes=3&hoststates=7&servicestates=120&limit=25',
+
+# Reports using Host/Servicegroups
+    '/thruk/cgi-bin/summary.cgi?report=1&displaytype=1&timeperiod=last7days&smon=9&sday=1&syear=2013&shour=0&smin=0&ssec=0&emon=9&eday=24&eyear=2013&ehour=24&emin=0&esec=0&hostgroup='.$hostgroup.'&servicegroup=all&host=all&alerttypes=3&statetypes=3&hoststates=7&servicestates=120&limit=25',
+    '/thruk/cgi-bin/summary.cgi?report=1&displaytype=1&timeperiod=last7days&smon=9&sday=1&syear=2013&shour=0&smin=0&ssec=0&emon=9&eday=24&eyear=2013&ehour=24&emin=0&esec=0&hostgroup=all&servicegroup='.$servicegroup.'&host=all&alerttypes=3&statetypes=3&hoststates=7&servicestates=120&limit=25',
 ];
 
 for my $url (@{$pages}) {
