@@ -2,6 +2,8 @@ This file documents the revision history for the Monitoring Webinterface Thruk.
 
 next:
           - show apache status in performance page
+          - Bug Fixes
+            - summary: fixed reports using host/servicegroups in combination with the mysql logcache
 
 1.76-3   Tue Sep  3 23:00:09 CEST 2013
           - new site 'collapsed' panel for large setups
